--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,3 +2,6 @@
 @use "./abstracts/reset";
 @use "./components/header/header.scss";
 @use "./components/home/home.scss";
+@use "./components/about/about.scss";
+@use "./components/nextPage/nextPage.scss";
+@use "./components/footer/footer.scss";
