--- a/scss/base.scss
+++ b/scss/base.scss
@@ -3,6 +3,7 @@ body{
     background: #eee;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
+    font-family: sans-serif;
 
 }
 
