--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -34,7 +34,7 @@
 
         &:hover{
             cursor: pointer;
-            background: colors.$red-color;
+            color: colors.$red-color;
            }
 
     }
