--- a/scss/components/nextPage/nextPage.scss
+++ b/scss/components/nextPage/nextPage.scss
@@ -26,7 +26,7 @@
     &__h2{
         margin-top: 2rem;
         font-size: 250%;
-      
+      color:  #191919;
 
     }
 
@@ -45,6 +45,7 @@
     &__p{
         font-size: 150%;
         width: 30rem;
+        color: #191919;
         
 
     }
