--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,16 +1,17 @@
 body{
     min-height: 100vh;
     background: #eee;
-    font-family: 'Poppins', sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
     scroll-behavior: smooth;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 
 }
 
 section{
-    min-height: 40rem;
+    min-height: 10rem;
    
 }
+
 
 
 
