--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -28,7 +28,7 @@
 
     &__link{
         text-decoration: none;
-        color: #eee;
+        color: #191919;
         transition: 0.5s all;
 
 
@@ -51,7 +51,7 @@
     }
 
     &__logowrapper{
-       margin-right:92rem ;
+       margin-right:72rem ;
     }
     
 }
