--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,6 @@
 @use "./components/about/about.scss";
 @use "./components/nextPage/nextPage.scss";
 @use "./components/footer/footer.scss";
+@use "./components/werkwijze/werkwijze.scss";
+@use "./components/projecten/projecten.scss";
+@use "./components/werkenbij/werkenbij.scss";
