--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
   min-height: 100vh;
   background: #eee;
-  font-family: "Poppins", sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   scroll-behavior: smooth;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 section {
-  min-height: 40rem;
+  min-height: 10rem;
 }
 
 *, *::before, *::after {
@@ -38,7 +38,7 @@ html {
 }
 .header__link {
   text-decoration: none;
-  color: #eee;
+  color: #191919;
   transition: 0.5s all;
 }
 .header__link:hover {
@@ -55,7 +55,7 @@ html {
   object-fit: contain;
 }
 .header__logowrapper {
-  margin-right: 92rem;
+  margin-right: 72rem;
 }
 
 .home {
@@ -64,16 +64,30 @@ html {
   height: 100vh;
   object-fit: cover;
   position: relative;
+  background-size: cover;
+  background-position: center center;
+}
+.home--organisatie {
+  background-image: url("../img/organisatiehome2.jpg");
+}
+.home--projecten {
+  background-image: url("../img/projectenhome3.jpg");
+}
+.home--werkenbij {
+  background-image: url("../img/werkenbijhome.jpg");
 }
 .home__wrapperText {
   position: absolute;
   bottom: 0;
   left: 0;
-  color: #eee;
+  color: #191919;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   padding: 2rem;
+}
+.home__wrapperText--home {
+  color: #eee;
 }
 .home__h2 {
   font-size: 300%;
@@ -124,6 +138,10 @@ html {
   font-size: 250%;
   color: #191919;
 }
+.about__h3 {
+  margin-top: 1rem;
+  font-size: 220%;
+}
 .about__imgFigure {
   width: 120rem;
   height: 60rem;
@@ -142,10 +160,64 @@ html {
   height: 100%;
 }
 .about__text {
-  margin-top: 2rem;
+  margin-top: 3rem;
   font-size: 200%;
   width: 60%;
-  height: 5rem;
+}
+.about__card {
+  margin-top: 10rem;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  width: 100rem;
+  height: 37rem;
+  background-color: #D8D9DA;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
+}
+.about__card--imgwrapper {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+.about__card--img {
+  height: 100%;
+  width: 100%;
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
+}
+.about__card--textwrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.5rem;
+  padding: 1rem;
+}
+.about__card--h2 {
+  font-size: 200%;
+}
+.about__card--p {
+  font-size: 180%;
+}
+.about__card--arrowLink {
+  text-decoration: none;
+}
+.about__card--arrowButton {
+  display: flex;
+  width: 13rem;
+  height: 4rem;
+  border-radius: 0.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  transition: 0.5s all;
+  gap: 0.5rem;
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
+}
+.about__card--arrowButton:hover {
+  cursor: pointer;
+  background: #FE0000;
 }
 
 .nextPage {
@@ -157,6 +229,7 @@ html {
   gap: 3rem;
 }
 .nextPage__card {
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
   width: 40rem;
   height: 55rem;
   display: flex;
@@ -253,8 +326,163 @@ html {
 }
 .footer__linkWrapper {
   display: flex;
-  flex-direction: column;
   gap: 0.5rem;
+}
+.footer__linkWrapper--letter {
+  display: flex;
+  flex-direction: column;
+}
+.footer__icon {
+  font-size: 170%;
+}
+
+.werkwijze {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.werkwijze__card {
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
+  margin-top: 2rem;
+  padding: 3rem;
+  width: 80rem;
+  height: 25rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: #D8D9DA;
+  transition: 0.8s all;
+}
+.werkwijze__card--p {
+  display: flex;
+  gap: 1rem;
+  font-size: 180%;
+}
+.werkwijze__link {
+  text-decoration: none;
+  color: #191919;
+  text-decoration: underline;
+}
+.werkwijze__link:hover {
+  cursor: pointer;
+  color: #FE0000;
+}
+
+.projecten {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 4rem;
+}
+.projecten__Hwrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 3rem;
+  gap: 1rem;
+}
+.projecten__h2 {
+  font-size: 250%;
+  color: #191919;
+}
+.projecten__h3 {
+  font-size: 220%;
+}
+.projecten__article {
+  margin-top: 2rem;
+  color: #191919;
+  width: 40rem;
+  height: 40rem;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  position: relative;
+  background-size: cover;
+  background-position: center center;
+  transition: 0.5s all;
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
+}
+.projecten__article--1 {
+  background-image: url("../img/spinoza.jpg");
+}
+.projecten__article--2 {
+  background-image: url("../img/aics.jpg");
+}
+.projecten__article--3 {
+  background-image: url("../img/bostheater.png");
+}
+.projecten__article--4 {
+  background-image: url("../img/wereld.jpg");
+}
+.projecten__article--5 {
+  background-image: url("../img/kwartier.png");
+}
+.projecten__article--6 {
+  background-image: url("../img/renovatie.jpg");
+}
+.projecten__article--7 {
+  background-image: url("../img/afc.jpg");
+}
+.projecten__article--8 {
+  background-image: url("../img/werven.jpg");
+}
+.projecten__article:hover {
+  width: 41rem;
+  height: 41rem;
+  cursor: pointer;
+  color: #fe0000;
+}
+.projecten__article--link {
+  text-decoration: none;
+}
+.projecten__article--h2 {
+  font-size: 230%;
+}
+.projecten__article--p {
+  font-size: 180%;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3rem;
+}
+
+.werkenbij {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.werkenbij__article {
+  margin-top: 3rem;
+  height: 85rem;
+  width: 90rem;
+  background-color: #eee;
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.werkenbij__article--h2 {
+  font-size: 200%;
+  text-decoration: underline;
+  color: #191919;
+}
+.werkenbij__article--p {
+  font-size: 200%;
+}
+.werkenbij__article--figure {
+  width: 50rem;
+  height: 30rem;
+  object-fit: contain;
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
+}
+.werkenbij__article--img {
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
