--- a/scss/components/home/home.scss
+++ b/scss/components/home/home.scss
@@ -6,16 +6,38 @@
   height: 100vh;
   object-fit: cover;
   position: relative;
+  background-size: cover;
+  background-position: center center;
+
+  &--organisatie{
+    background-image: url("../img/organisatiehome2.jpg");
+
+  }
+
+  &--projecten{
+    background-image: url("../img/projectenhome3.jpg");
+
+  }
+
+  &--werkenbij{
+    background-image: url("../img/werkenbijhome.jpg");
+
+  }
 
   &__wrapperText {
     position: absolute;
     bottom: 0;
     left: 0;
-    color: #eee;
+    color: #191919;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
+
+    &--home{
+      color: #eee;
+
+    }
   }
 
   &__h2{
