--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,4 @@
 @use "./components/werkwijze/werkwijze.scss";
 @use "./components/projecten/projecten.scss";
 @use "./components/werkenbij/werkenbij.scss";
+@use "./components/project/project.scss";
