--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -3,6 +3,9 @@
 
 .header{
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
  
 
     &__ul{
@@ -50,8 +53,8 @@
         object-fit: contain;
     }
 
-    &__logowrapper{
-       margin-right:72rem ;
-    }
+    // &__logowrapper{
+    //    margin-right:72rem ;
+    // }
     
 }
