--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,3 +9,4 @@
 @use "./components/projecten/projecten.scss";
 @use "./components/werkenbij/werkenbij.scss";
 @use "./components/project/project.scss";
+@use "./abstracts/mediaqeuries";
