--- a/scss/abstracts/_mediaqeuries.scss
+++ b/scss/abstracts/_mediaqeuries.scss
@@ -162,17 +162,17 @@
       padding: 2rem;
       object-fit: contain;
     }
-    &__figureimg{
-        margin-top: 5rem;
-        width: 100%;
-        height: 40rem;
-        padding: 2rem;
-        object-fit: contain;
+    &__figureimg {
+      margin-top: 5rem;
+      width: 100%;
+      height: 40rem;
+      padding: 2rem;
+      object-fit: contain;
+    }
+    &__h3 {
+      font-size: 170%;
+    }
   }
-  &__h3{
-    font-size: 170%;
-  }
-}
 }
 
 @media screen and (max-width: 68.75rem) {
@@ -420,11 +420,16 @@
       font-size: 150%;
     }
   }
+  .projecten__h3{
+    font-size: 180%;
+  }
 }
 
 @media screen and (max-width: 25.5rem) {
   .projecten {
+   
     padding: 3rem;
+
 
     &__article {
       margin-top: 2rem;
