hoop laatste commit

--- a/scss/components/projecten/projecten.scss
+++ b/scss/components/projecten/projecten.scss
@@ -36,7 +36,7 @@
     background-size: cover;
     background-position: center center;
     transition: 0.5s all;
-    box-shadow: 0 4px 8px rgba(0.7, 0.7, 0.7, 0.7); /* Add a subtle box shadow */
+    box-shadow: 0 4px 8px rgba(0.7, 0.7, 0.7, 0.7); 
 
     &--1 {
       background-image: url("../img/spinoza.jpg");
