--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ html {
   background-size: cover;
   background-position: center center;
   transition: 0.5s all;
-  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7); /* Add a subtle box shadow */
+  box-shadow: 0 4px 8px rgba(1, 1, 1, 0.7);
 }
 .projecten__article--1 {
   background-image: url("../img/spinoza.jpg");
