--- a/css/style.css
+++ b/css/style.css
@@ -731,7 +731,7 @@ html {
   .about__imgFigure2 {
     margin-top: 5rem;
     width: 100%;
-    height: 45rem;
+    height: 35rem;
     padding: 2rem;
     object-fit: cover;
   }
@@ -905,6 +905,10 @@ html {
     align-items: center;
     flex-direction: column;
   }
+  .header__logo {
+    width: 8rem;
+    height: 5rem;
+  }
   .header__ul {
     list-style: none;
     width: 100%;
@@ -925,11 +929,21 @@ html {
   .about__text {
     font-size: 150%;
   }
+  .about__imgFigure {
+    width: 100%;
+    height: 30rem;
+    padding: 2rem;
+    object-fit: cover;
+  }
   .projecten__h3 {
     font-size: 180%;
   }
 }
 @media screen and (max-width: 25.5rem) {
+  .header__logo {
+    width: 7rem;
+    height: 5rem;
+  }
   .projecten {
     padding: 3rem;
   }
@@ -958,6 +972,12 @@ html {
   .about__text {
     font-size: 150%;
   }
+  .about__imgFigure {
+    width: 100%;
+    height: 28rem;
+    padding: 2rem;
+    object-fit: cover;
+  }
   .nextPage {
     margin-top: 1rem;
     display: flex;
@@ -985,7 +1005,7 @@ html {
     color: #191919;
   }
   .nextPage__figureImg {
-    width: 25rem;
+    width: 20rem;
     height: 15rem;
   }
   .nextPage__img {
