--- a/scss/abstracts/_mediaqeuries.scss
+++ b/scss/abstracts/_mediaqeuries.scss
@@ -196,7 +196,7 @@
     &__imgFigure2 {
       margin-top: 5rem;
       width: 100%;
-      height: 45rem;
+      height: 35rem;
       padding: 2rem;
       object-fit: cover;
     }
@@ -394,6 +394,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    &__logo {
+      width: 8rem;
+      height: 5rem;
+    }
 
     &__ul {
       list-style: none;
@@ -419,6 +423,12 @@
     &__text {
       font-size: 150%;
     }
+    &__imgFigure {
+      width: 100%;
+      height: 30rem;
+      padding: 2rem;
+      object-fit: cover;
+    }
   }
   .projecten__h3{
     font-size: 180%;
@@ -426,6 +436,13 @@
 }
 
 @media screen and (max-width: 25.5rem) {
+
+  .header{
+    &__logo {
+      width: 7rem;
+      height: 5rem;
+    }
+  }
   .projecten {
    
     padding: 3rem;
@@ -458,6 +475,12 @@
     &__text {
       font-size: 150%;
     }
+    &__imgFigure {
+      width: 100%;
+      height: 28rem;
+      padding: 2rem;
+      object-fit: cover;
+    }
   }
 
   .nextPage {
@@ -489,7 +512,7 @@
     }
 
     &__figureImg {
-      width: 25rem;
+      width: 20rem;
       height: 15rem;
     }
 
