--- a/css/style.css
+++ b/css/style.css
@@ -888,15 +888,64 @@ html {
     font-size: 150%;
   }
   .footer__h2 {
-    font-size: 180%;
+    font-size: 160%;
   }
   .footer__p {
-    font-size: 150%;
+    font-size: 140%;
   }
 }
 @media screen and (max-width: 35rem) {
   .home__buttonWrapper {
     padding-top: 10rem;
+  }
+  .footer {
+    width: 100%;
+    height: 20rem;
+    background-color: #D8D9DA;
+    margin-top: 10rem;
+  }
+  .footer__ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+  }
+  .footer__li {
+    display: flex;
+    list-style: none;
+    margin-top: 5rem;
+    flex-direction: column;
+    font-size: 150%;
+    width: 25rem;
+    gap: 1rem;
+  }
+  .footer__link {
+    text-decoration: none;
+    color: #191919;
+    transition: 0.5s all;
+    width: max-content;
+  }
+  .footer__link:hover {
+    cursor: pointer;
+    color: #FE0000;
+    text-decoration: underline;
+  }
+  .footer__linkWrapper {
+    display: flex;
+    gap: 0.5rem;
+  }
+  .footer__linkWrapper--letter {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer__icon {
+    font-size: 170%;
+  }
+  .footer__h2 {
+    font-size: 100%;
+  }
+  .footer__p {
+    font-size: 100%;
   }
   .header {
     width: 100%;
@@ -940,6 +989,12 @@ html {
   }
 }
 @media screen and (max-width: 25.5rem) {
+  .footer__h2 {
+    font-size: 100%;
+  }
+  .footer__p {
+    font-size: 100%;
+  }
   .header__logo {
     width: 7rem;
     height: 5rem;
