--- a/scss/abstracts/_mediaqeuries.scss
+++ b/scss/abstracts/_mediaqeuries.scss
@@ -375,10 +375,10 @@
       font-size: 150%;
     }
     &__h2 {
-      font-size: 180%;
+      font-size: 160%;
     }
     &__p {
-      font-size: 150%;
+      font-size: 140%;
     }
   }
 }
@@ -388,6 +388,68 @@
       padding-top: 10rem;
     }
   }
+  .footer{
+    width: 100%;
+    height: 20rem;
+    background-color: #D8D9DA;
+    margin-top: 10rem;
+   
+    &__ul{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+       
+
+    }
+
+    &__li{
+        display: flex;
+        list-style: none;
+        margin-top: 5rem;
+        flex-direction: column;
+        font-size: 150%;
+        width: 25rem;
+        gap: 1rem;
+        
+    }
+
+    &__link{
+        text-decoration: none;
+        color: #191919;
+        transition: 0.5s all;
+        width: max-content;
+
+
+        &:hover{
+            cursor: pointer;
+            color: colors.$red-color;
+            text-decoration: underline;
+           }
+      
+    }
+
+    &__linkWrapper{
+        display: flex;
+        gap: 0.5rem;
+
+        &--letter{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    &__icon{
+        font-size: 170%;
+    }
+    &__h2{
+      font-size: 100%;
+  }
+
+  &__p{
+      font-size: 100%;
+  }
+}
   .header {
     width: 100%;
     display: flex;
@@ -436,6 +498,16 @@
 }
 
 @media screen and (max-width: 25.5rem) {
+
+  .footer{
+    &__h2{
+      font-size: 100%;
+  }
+
+  &__p{
+      font-size: 100%;
+  }
+  }
 
   .header{
     &__logo {
